fix alignment

--- a/people.css
+++ b/people.css
@@ -9,7 +9,7 @@ html {
 .column {
   float: left;
   width: 33.0%;
-  max-width: 170px;
+  max-width: 190px;
   margin-bottom: 0px;
   padding: 0 10px;
 }
